# YoutuDownloader-Bot

./: .gitignore  .gitpod.yml  AnimatedSticker.tgs  main.py  pyproject.toml
.idx/: dev.nix
modules/: compress.py  downloads.py  playlist.py  progress.py  pyrogram_init.py  server.py  uploads.py
tests/: test.py
